- Fixed video overflow on about page.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16528,6 +16528,22 @@ input:checked + .slider:before {
   padding: 30px;
 }
 
+.campaign-page .videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+}
+
+.campaign-page .videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 #light-slider ul {
   list-style: none outside none;
   padding-left: 0;
